# TDL_translation

./: README.md  pyproject.toml
tdl_translation/: __init__.py  artifacts.py  cli.py  components.py  errors.py  hf_gemma.py  pipeline.py
tests/: conftest.py  test_hf_integration.py  test_pipeline.py
